--- a/src/main.css
+++ b/src/main.css
@@ -7,6 +7,15 @@
 
 html, body {
   height: 100%;
+  background-color: #333;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
